--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue-enum": "^1.0.5",
     "vue-i18n": "^8.15.7",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vue-grid-layout": "^2.3.7",
+    "interactjs": "^1.9.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
